# fs-mcp

./: .gitignore  .goreleaser.yaml  CHANGELOG.md  Dockerfile.test  Makefile  PR.md  README.md  change.txt  go.mod  go.sum  log.md  pyproject.toml  test_redirect_regex.py  tmp.md  tmp.txt
.claude/: settings.json
.github/workflows/: release.yaml  test-deps.yaml  test.yaml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
cmd/fs-mcp/: main.go
docs/gemini_function_calls/: scrape.json
gsd-lite/: ARCHITECTURE.md  PROJECT.md  WORK.md
internal/bootstrap/: install.go  libc.go  manifest.go  remote.go
internal/portal/: detect.go
internal/runtime/: exec.go  exec_test.go
internal/server/: server.go
internal/tools/: common.go  duckdb.go  edit.go  fsguard.go  grep.go  gsd.go  gsddump.go  hq.go  hq_test.go  jq.go  mkdir.go  read.go  run.go  run_test.go  tree.go  write.go  yq.go
internal/updater/: cache.go  github.go  swap.go  (+2 more)
releases/: README.md  v1.47.1.md  v1.47.2.md  v1.47.3.md  v2.0.0.md  v2.0.1.md  v2.0.2.md  v2.0.3.md  v2.0.4.md  v2.0.5.md  v2.0.6.md  v2.0.7.md  v2.0.8.md  v2.0.9.md  v2.1.0.md
scripts/: docker-dep-check.py  install.sh  measure_tool_tokens.py  rtk-config.toml  test-deps-multiarch.sh
tests/: debug_pattern.py  test_append_sentinel.py  test_check_deps.py  test_concurrent_review.py  test_edit_files.py  test_edit_tool.py  test_gemini_schema_compat.py  test_gsd_lite_analyzer.py  test_login_env.py  test_propose_and_review_validation.py  test_rtk_integration.py  test_rtk_new_integration.py  test_server.py  test_tool_arg_descriptions.py  test_tools.py
tmp/: append_test.txt  new_file.md  test_batch.py  test_code.py  test_log.md  test_params.md
(+31 files in other folders)
