[project]
name = "fs-mcp"
version = "0.1.0"
description = "A secure MCP filesystem server with Stdio and Web UI modes."
authors = [{name = "Your Name", email = "you@example.com"}]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "fastmcp>=0.1.0",
    "streamlit>=1.30.0",
]

[project.scripts]
fs-mcp = "fs_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fs_mcp"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]