[project]
name = "fs-mcp"
version = "0.1.1"
description = "A secure MCP filesystem server with Stdio and Web UI modes."
authors = [{name = "luutuankiet", email = "luutuankiet.ftu2@gmail.com"}]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "fastmcp>=0.1.0",
    "google-genai>=1.56.0",
    "httpx>=0.28.1",
    "pydantic>=2.0",
    "streamlit>=1.30.0",
    "streamlit-js-eval>=0.1.5",
]

[project.scripts]
fs-mcp = "fs_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fs_mcp"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]


[tool.semantic_release]
# This tells the tool to update the 'version' field in [project]
version_toml = ["pyproject.toml:project.version"]

# This tells the tool how to build the package AFTER updating the version
build_command = "python -m build"

# (Optional) If you want to keep a version string in your code, add this:
# version_variables = ["src/fs_mcp/__init__.py:__version__"]

